Added nice-looking Google publish hint

--- a/survey-page.html
+++ b/survey-page.html
@@ -7,9 +7,12 @@
 <body>
 
     <form action="survey-page-choose-area.html" method="get">
-        <input type="text" name="gdoc" size="64" value="https://docs.google.com/spreadsheets/d/0xDEADBEEF/pubhtml">
+        <input type="text" name="gdoc" size="64" placeholder="https://docs.google.com/spreadsheets/d/0xDEADBEEF/pubhtml">
         <input type="submit">
     </form>
+    
+    <p>Use the URL from Google Spreadsheets “Publish to the web” feature, accessed under the File menu:</p>
+    <p><img width="732" height="417" border="1" alt="Google Docs publish dialog" src="gdoc-publish.png"></p>
 
 </body>
 </html>
