--- a/survey-page-results.html
+++ b/survey-page-results.html
@@ -4,16 +4,8 @@
 	<meta charset="utf-8" />
 	<title>Resident Web Use Results</title>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-    <style type="text/css">
-        .container {
-            display: flex;
-            height: 500px;
-        }
-        .container div {
-            flex: 1;
-        }
-    </style>
 
+    <link rel="stylesheet" href="style.css" />
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.2.min.js" charset="utf-8"></script>
 	<script src="turf.min.js"></script>
