--- a/survey-page-results.html
+++ b/survey-page-results.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
@@ -140,7 +140,7 @@
             }
         
             update_status('Found ' + stuff.tracts.length + ' tracts in ' + stuff.city.name + ' and <a target="_blank" href="' + spreadsheet_url + '">a spreadsheet with ' + geo_responses.length + ' geographic responses</a>.');
-	    window.setTimeout(function() { correlate_geographies(geo_responses, stuff.tracts, correlated_spreadsheet);}, 4000);
+	    _.defer(correlate_geographies,geo_responses, stuff.tracts, correlated_spreadsheet);
         }
         
         function correlated_spreadsheet(tracts)
