Toner labels on top of geojson layer
allow pointer events to reach the geojson layer by setting the css
pointer-events for top layer to none
this is a bug in leaflet and will be fixed in version 1.0
this is a workaround from jfirebaugh
http://bl.ocks.org/jfirebaugh/5380413

--- a/survey-page-results.html
+++ b/survey-page-results.html
@@ -12,6 +12,9 @@
         .container div {
             flex: 1;
         }
+	.leaflet-top-pane {
+	    pointer-events: none;
+	}
     </style>
 
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
