Add more info to the feature popup
if more information is available for the left map show it
show all the information that is used on the right hand side map
use a less than and more than method to show the calculated amount of
responses per tract

--- a/survey-page-results.html
+++ b/survey-page-results.html
@@ -176,7 +176,11 @@
     
             for(var i = 0; i < stuff.tracts.length; i++)
             {
-                geojson.features.push(stuff.tracts[i].feature);
+                var tract = stuff.tracts[i];
+                var feature = tract.feature;
+                feature.properties.data = tract.data;
+                feature.properties.responses = tract.responses;
+                geojson.features.push(feature);
             }
     
             var style_function = get_style_function(stuff.tracts, RESPONSES, GREENS);
