Make URLs protocol-relative
the "staging preview" with jekit uses https by default
this caused the leaflet library to not load correctly with a "Mixed
Content" error

--- a/survey-page-results.html
+++ b/survey-page-results.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Resident Web Use Results</title>
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <style type="text/css">
         .container {
             display: flex;
@@ -14,8 +14,8 @@
         }
     </style>
 
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-    <script src="https://code.jquery.com/jquery-1.11.2.min.js" charset="utf-8"></script>
+    <script src="//cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.2.min.js" charset="utf-8"></script>
 	<script src="turf.min.js"></script>
 	<script src="regression.js"></script>
 	<script src="tabletop.js"></script>
