Update popup style
add min-width to display large income numbers
align text and image properly

--- a/survey-page-results.html
+++ b/survey-page-results.html
@@ -235,27 +235,33 @@
       </div>
       <div class="detail-row detail-housing-income clearfix">
         <div class="detail housing clearfix">
-          <i class="fa fa-home"></i>
-          <h4>{rentalPercentage}<span>%</span></h4>
+          <h4>
+            <i class="fa fa-home"></i>
+            <span cass="text">{rentalPercentage}<span class="percentage">%</span></span>
+          </h4>
           <p class="label">rental percentage</p>
         </div>
         <div class="detail income clearfix">
-          <i class="fa fa-usd"></i>
-          <h4>{income}</h4>
+          <h4>
+            <i class="fa fa-usd"></i>
+            <span cass="text">{income}</span>
+          </h4>
           <p class="label">per capita income</p>
         </div>
       </div>
       <div class="detail-row detail-population-response clearfix">
         <div class="detail population clearfix">
-          <i class="fa fa-male"></i>
-          <h4>{population}</h4>
+          <h4>
+            <i class="fa fa-male"></i>
+            <span cass="text">{population}</span>
+          </h4>
           <p class="label">population</p>
         </div>
         <div class="detail responses clearfix">
-          <h4 class="test">
+          <h4>
             <i class="fa fa-envelope"></i>
             <div class="high-low">{responsesHighLow}</div>
-            {responses}
+            <span cass="texr">{responses}</span>
           </h4>
           <p class="label">responses</p>
         </div>
