--- a/survey-page-results.html
+++ b/survey-page-results.html
@@ -8,9 +8,11 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.2.min.js" charset="utf-8"></script>
 	<script src="turf.min.js"></script>
+	<script src="underscore-min.js"></script>
 	<script src="regression.js"></script>
 	<script src="tabletop.js"></script>
 	<script src="lib.js"></script>
+	<script src="census-reporter.js"></script>
 	<script>
 	
         var stuff = {
