--- a/survey-page-results.html
+++ b/survey-page-results.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="//cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script src="//code.jquery.com/jquery-1.11.2.min.js" charset="utf-8"></script>
-	<script src="underscore.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 	<script src="turf.min.js"></script>
 	<script src="regression.js"></script>
 	<script src="tabletop.js"></script>
