Add tilde to response item in popup
removes the 'less than', 'greater than' text and adds only the tilde to
show that this is not an integer value
add 'response' if the number of responses is about one

--- a/survey-page-results.html
+++ b/survey-page-results.html
@@ -255,10 +255,9 @@
         <div class="detail responses clearfix">
           <h4>
             <i class="fa fa-envelope"></i>
-            <div class="high-low">{responsesHighLow}</div>
-            <span cass="texr">{responses}</span>
+            <span cass="text">{round}{responses}</span>
           </h4>
-          <p class="label">responses</p>
+          <p class="label">response{responsePlural}</p>
         </div>
       </div>
       <div class="detail-row last detail-population-segregation clearfix">
